--- a/styles/styles.css
+++ b/styles/styles.css
@@ -389,16 +389,20 @@ body {
   padding: 0%;
 }
 .catalog-filter-price {
-  width: 287px;
+  width: 288px;
   margin: 0%;
   padding: 0%;
   margin-right: 81px;
+  display: grid;
+  grid-template-columns: 144px 144px;
+  gap: 20px 0px;
 }
 .catalog-filter-title {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
+  margin-bottom: 34px;
 }
 .control-lable {
   font-style: normal;
@@ -423,6 +427,7 @@ body {
   margin: 0%;
   padding: 0%;
   margin-top: 83px;
+  padding-bottom: 30px;
 }
 .sorting-type {
   color: #000000;
@@ -445,11 +450,16 @@ body {
 .hotel-card {
   color: #000000;
   background-color: #e5e5e5;
+  display: grid;
+  grid-template-rows: 60px min-content auto auto min-content min-content min-content;
+  grid-template-columns: 72px 180px 36px 151px 8px 160px 361px 160px 72px;
 }
 .hotel-card-list {
   margin: 0%;
   padding: 0%;
   list-style-type: none;
+  display: grid;
+  gap: 60px 72px;
 }
 .hotel-number {
   font-style: normal;
@@ -472,11 +482,42 @@ body {
   color: #000000;
   background-color: #e5e5e5;
   text-decoration: none;
+  grid-column: 2/3;
+  grid-row: ;
+}
+.hotel-card-title {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 31px;
+  margin: 0%;
+  grid-column: 4/7;
+}
+.hotel-class {
+  grid-column: 4/5;
+}
+.hotel-price-min {
+  grid-column: 6/7;
+}
+.button-more {
+  grid-column: 4/5;
+}
+.button-favorite {
+  color: #ffffff;
+  background-color: #83b3d3;
+  grid-column: 6/7;
+}
+.button-rating {
+  color: #000000;
+  background-color: #eadcdc;
+  grid-column: 8/9;
 }
 .pagination-show-more {
   background-color: #e5e5e5;
   margin: 0%;
   padding: 0%;
+  padding-top: 30px;
 }
 .button-pagination-show-more {
   color: #ffffff;
